--- a/apps/web-classic/package.json
+++ b/apps/web-classic/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "vercel-build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "clean": "rm -rf dist"
@@ -15,9 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "zustand": "^4.4.0",
-    "framer-motion": "^10.16.0",
-    "@son1k/shared-ui": "workspace:*",
-    "@son1k/shared-utils": "workspace:*"
+    "framer-motion": "^10.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
