--- a/apps/web-classic/package.json
+++ b/apps/web-classic/package.json
@@ -16,7 +16,12 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "zustand": "^4.4.0",
-    "framer-motion": "^10.16.0"
+    "framer-motion": "^10.16.0",
+    "axios": "^1.6.2",
+    "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
+    "zod": "^3.22.4",
+    "@hookform/resolvers": "^3.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
