--- a/apps/web-classic/package.json
+++ b/apps/web-classic/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.75.0",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.0",
+    "lucide-react": "^0.545.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
