🚀 Nova Post Pilot: Herramienta completa de marketing digital
✨ Nuevas funcionalidades:
- Análisis de perfiles sociales con Qwen 2
- Estrategias personalizadas por plataforma
- Ganchos virales semanales con variantes A/B/C
- Análisis SEO y hashtags optimizados
- Automatización de contenido y respuestas
- Dashboard de métricas en tiempo real

🛠️ Implementación técnica:
- Endpoint principal nova-post-pilot.ts
- Componente React completo NovaPostPilot.tsx
- Esquema de base de datos Supabase (8 tablas)
- Integración con Pixel Pilot como estratega
- Configuración Netlify Functions

🎯 Características destacadas:
- Formulario dinámico para múltiples perfiles sociales
- Análisis exhaustivo del contenido existente
- Recomendaciones personalizadas basadas en datos reales
- Navegación integrada en Son1kverse
- Almacenamiento persistente de análisis y métricas

📊 Arquitectura:
- Backend: Netlify Functions + Qwen 2 API
- Frontend: React + Tailwind CSS
- Database: Supabase con políticas de seguridad
- Integración: Pixel Pilot contextual y aprendizaje adaptativo

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
+    "dev:simple": "tsx watch src/simple-server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
     "test": "vitest",
