--- a/backend/package.json
+++ b/backend/package.json
@@ -37,56 +37,57 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.8.1",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
+    "aws-sdk": "^2.1519.0",
+    "axios": "^1.12.2",
+    "bcrypt": "^5.1.1",
+    "bullmq": "^4.15.4",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
-    "bcrypt": "^5.1.1",
+    "fluent-ffmpeg": "^2.1.2",
+    "helmet": "^7.1.0",
+    "http-status-codes": "^2.3.0",
+    "ioredis": "^5.3.2",
+    "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
-    "zod": "^3.22.4",
+    "multer": "^1.4.5-lts.1",
     "pino": "^8.17.2",
     "pino-pretty": "^10.3.1",
-    "ioredis": "^5.3.2",
-    "bullmq": "^4.15.4",
-    "socket.io": "^4.7.4",
-    "multer": "^1.4.5-lts.1",
-    "fluent-ffmpeg": "^2.1.2",
     "sharp": "^0.33.1",
-    "aws-sdk": "^2.1519.0",
-    "dotenv": "^16.3.1",
+    "socket.io": "^4.7.4",
     "uuid": "^9.0.1",
-    "joi": "^17.11.0",
-    "express-async-errors": "^3.1.1",
-    "http-status-codes": "^2.3.0"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.5",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/compression": "^1.7.5",
     "@types/bcrypt": "^5.0.2",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/fluent-ffmpeg": "^2.1.24",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
-    "@types/fluent-ffmpeg": "^2.1.24",
+    "@types/node": "^20.10.5",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
+    "@vitest/coverage-v8": "^1.1.0",
+    "@vitest/ui": "^1.1.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.1.1",
-    "typescript": "^5.3.3",
-    "tsx": "^4.6.2",
-    "vitest": "^1.1.0",
-    "@vitest/ui": "^1.1.0",
-    "@vitest/coverage-v8": "^1.1.0",
-    "supertest": "^6.3.3",
-    "@types/supertest": "^6.0.2",
-    "prisma": "^5.8.1",
     "husky": "^8.0.3",
-    "lint-staged": "^15.2.0"
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.1.1",
+    "prisma": "^5.8.1",
+    "supertest": "^6.3.3",
+    "tsx": "^4.6.2",
+    "typescript": "^5.3.3",
+    "vitest": "^1.1.0"
   },
   "engines": {
     "node": ">=20.0.0",
