--- a/netlify.toml
+++ b/netlify.toml
@@ -15,67 +15,98 @@
   MAX_REQUEST_SIZE = "10485760"
   REQUEST_TIMEOUT = "30000"
   CACHE_TTL = "300"
-  SUPABASE_URL = "https://son1kverse.supabase.co"
-  SUPABASE_SERVICE_ROLE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
 
-[[functions]]
+[functions]
   directory = "netlify/functions"
 
-# 🎵 FUNCIONES DE ANÁLISIS DE AUDIO
-[functions.analyze-audio]
-  timeout = 30
-
-# 🎼 FUNCIONES DE PROMPTS DE ARREGLO
-[functions.arrangement-prompt]
-  timeout = 30
-
-# 📝 FUNCIONES DE LETRAS ESTRUCTURADAS
-[functions.structured-lyrics]
-  timeout = 45
-
-# 🎛️ FUNCIONES DE PROMPTS DE THE GENERATOR
-[functions.generator-prompt]
-  timeout = 30
-
-# 🛡️ FUNCIONES DEL SANCTUARIO
-[functions.sanctuary-chat]
-  timeout = 30
-  node_bundler = "esbuild"
-
-# 🚀 FUNCIONES DE NOVA POST PILOT
-[functions.nova-post-pilot]
-  timeout = 45
-  node_bundler = "esbuild"
-
-[functions.qwen-lyrics]
-  timeout = 30
-
-[functions.qwen-translate]
-  timeout = 30
-
-[functions.pixel-assistant]
-  timeout = 30
-
-[functions.qwen-smart-prompts]
-  timeout = 30
-
-[functions.optimize-prompt]
-  timeout = 30
-
-[[edge_functions]]
-  directory = "netlify/edge-functions"
-
-[edge_functions.cache-response]
-  path = "/api/cache/*"
+# 🌐 CONFIGURACIÓN DE REDIRECCIONES Y SUBDOMINIOS
+[[redirects]]
+  from = "https://son1kvers3.com/*"
+  to = "/index.html"
+  status = 200
+  force = true
 
 [[redirects]]
-  from = "/api/qwen/*"
-  to = "/.netlify/functions/:splat"
+  from = "https://www.son1kvers3.com/*"
+  to = "/index.html"
   status = 200
+  force = true
 
-[[headers]]
-  for = "/.netlify/functions/*"
-  [headers.values]
-    Access-Control-Allow-Origin = "*"
-    Access-Control-Allow-Headers = "Content-Type, Authorization"
-    Access-Control-Allow-Methods = "GET, POST, OPTIONS"
+# 🎵 GHOST STUDIO SUBDOMAIN
+[[redirects]]
+  from = "https://ghost-studio.son1kvers3.com/*"
+  to = "/index.html"
+  status = 200
+  force = true
+  headers = {X-Ghost-Studio = "true"}
+
+# 🚀 NOVA POST PILOT SUBDOMAIN
+[[redirects]]
+  from = "https://nova-post-pilot.son1kvers3.com/*"
+  to = "/index.html"
+  status = 200
+  force = true
+  headers = {X-Nova-Post-Pilot = "true"}
+
+# 🛡️ SANCTUARY SUBDOMAIN
+[[redirects]]
+  from = "https://sanctuary.son1kvers3.com/*"
+  to = "/index.html"
+  status = 200
+  force = true
+  headers = {X-Sanctuary = "true"}
+
+# 🎛️ THE GENERATOR SUBDOMAIN
+[[redirects]]
+  from = "https://the-generator.son1kvers3.com/*"
+  to = "/index.html"
+  status = 200
+  force = true
+  headers = {X-The-Generator = "true"}
+
+# 🤖 PIXEL SUBDOMAIN
+[[redirects]]
+  from = "https://pixel.son1kvers3.com/*"
+  to = "/index.html"
+  status = 200
+  force = true
+  headers = {X-Pixel = "true"}
+
+# 🎼 SUNO SUBDOMAIN
+[[redirects]]
+  from = "https://suno.son1kvers3.com/*"
+  to = "/index.html"
+  status = 200
+  force = true
+  headers = {X-Suno = "true"}
+
+# 📝 LETRAS SUBDOMAIN
+[[redirects]]
+  from = "https://letras.son1kvers3.com/*"
+  to = "/index.html"
+  status = 200
+  force = true
+  headers = {X-Letras = "true"}
+
+# 🧠 PROMPTS SUBDOMAIN
+[[redirects]]
+  from = "https://prompts.son1kvers3.com/*"
+  to = "/index.html"
+  status = 200
+  force = true
+  headers = {X-Prompts = "true"}
+
+# 🔒 CONFIGURACIÓN DE SEGURIDAD
+[security]
+  [security.headers]
+    for = "/*"
+    [security.headers.values]
+      X-Frame-Options = "DENY"
+      X-XSS-Protection = "1; mode=block"
+      X-Content-Type-Options = "nosniff"
+      Referrer-Policy = "strict-origin-when-cross-origin"
+      Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://dashscope.aliyuncs.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; connect-src 'self' https://dashscope.aliyuncs.com https://son1kverse.supabase.co https://ai.imgkits.com https://usa.imgkits.com;"
+
+# 📊 CONFIGURACIÓN DE ANALYTICS
+[analytics]
+  enabled = true
